# revr

./: .gitconfig  Dockerfile  build-docker.sh  rule.txt
client/: Cargo.toml
client/src/: back.rs  command.rs  errors.rs  listen.rs  main.rs  session.rs  sessions.rs  upload.rs
client/src/cli/: ascii.rs  color.rs  error.rs  event.rs  mod.rs  read.rs
client/src/cmd/: back_cmd.rs  help_cmd.rs  listen_cmd.rs  mod.rs  remote_cmd.rs  sessions_cmd.rs  upload_cmd.rs
client/src/revshell/: mod.rs  session.rs  shell.rs
client/src/session/: mod.rs  shell.rs
client/src/shell/: mod.rs  readline.rs
server/: Cargo.toml
server/src/: main.rs
