[package]
name = "revr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
portable-pty = "0.8.1"
tokio = { version = "1.38.0", features = ["full"] }
